fix: make agenda visible and update when needed

--- a/src/js/components/agenda-item/index.css
+++ b/src/js/components/agenda-item/index.css
@@ -14,7 +14,8 @@ a {
   transition: background 0.5s;
 }
 
-a:visited, a:hover {
+a:visited,
+a:hover {
   color: inherit;
 }
 
@@ -22,7 +23,7 @@ a>* {
   padding: 0.5em;
 }
 
-a:hover {
+a[href]:hover {
   background: rgba(255, 255, 255, 0.2);
 }
 
